# libjupitermag

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  clean.bat  compile.bat  generateheader.py  getlibs.sh  makefile
.github/scripts/: patch-msvc-deps.ps1
.github/workflows/: ci.yml  linux-pr-build-test.yml
include/: jupitermag.h  jupitermag.template  jupitermagc.h  libjupitermag.h
lib/: libjupitermag.dylib
lib/libjupitermag/: libjupitermag.dylib
src/: CMakeLists.txt  compile.bat  compileobj.bat  coordconv.cc  coordconv.h  footprint.cc  footprint.h  generateheader.cc  generateheader.h  interptraceclosestpos.cc  interptraceclosestpos.h  jupitermag.def  libjupitermag.cc  libjupitermag.h  makefile  model.cc  model.h  test.h  trace.cc  trace.h  traceclosestpos.cc  traceclosestpos.h  trimstring.cc  trimstring.h
src/con2020/: bessel-old.h  clip.h  con2020.cc  con2020.h  libcon2020.cc  libcon2020.h  makefile  sgn.h
src/spline/: makefile
test/: CMakeLists.txt  cpptest  cpptest.cc  ctest  ctest.c  makefile  regression_gtest.cc  test  test.cc  test.h  timing  timing.cc  timing.h
test/cpptest.dSYM/Contents/Resources/DWARF/: cpptest
test/ctest.dSYM/Contents/: Info.plist
test/ctest.dSYM/Contents/Resources/DWARF/: ctest
test/data/: field_baseline.csv  trace_summary.csv
test/savetestdata/: README.md  generate_baseline  generate_baseline.cc  makefile
test/timing.dSYM/Contents/Resources/DWARF/: timing
test/unit/: CMakeLists.txt  config_debug_gtest.cc  regression_common.cc  regression_common.h  regression_config_gtest.cc  regression_field_gtest.cc  regression_geometry_gtest.cc  regression_robustness_gtest.cc  regression_trace_gtest.cc
